--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Muhammad Karim | Cybersecurity"
-tagline: "Cloud and network security notes"
+title: "Muhammad | Cybersecurity"
+tagline: "Biograophy"
 description: "Cybersecurity student exploring cloud security, networks, and secure systems."
 lang: en
 timezone: Asia/Karachi
@@ -16,7 +16,7 @@ github:
   username: MightyKareem
 
 social:
-  name: "Muhammad Karim"
+  name: "Muhammad"
   links:
     - https://github.com/MightyKareem
     - https://www.linkedin.com/in/muhammad-karim-9464b7247
